--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,8 @@
 @import url('https://unpkg.com/leaflet@1.9.4/dist/leaflet.css');
+body {
+  display: flex;
+  flex-direction: column;
+}
 
 ::-webkit-scrollbar {
   width: 10px;
