--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,6 @@
 @import url('https://unpkg.com/leaflet@1.9.4/dist/leaflet.css');
+@import 'react-toastify/dist/ReactToastify.css';
+
 body {
   display: flex;
   flex-direction: column;
