--- a/src/components/SearchEngine/SearchEngine.module.css
+++ b/src/components/SearchEngine/SearchEngine.module.css
@@ -1,5 +1,7 @@
 .container {
-  border-radius: 6px;
+  border-radius: rem(6px);
   border: 1px solid rgba(255, 255, 255, 0.125);
   box-shadow: var(--mantine-shadow-sm);
+  background-color: var(--mantine-color-body);
+  padding: 1rem;
 }
